# el2425_bitcraze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  anchor_pos.yaml  fly_multiple.py  instructions.md  package.xml
Matlab/: ReadRosbag.m
bagfiles/: 2016-11-30-16-35-31.bag  2016-12-06-12-05-45.bag
data/: anchor_pos.yaml  rvizconfig_sim.rviz  rvizconfig_sim_multiple.rviz  rvizconfig_with_cf.rviz  rvizconfig_with_cf_multiple.rviz
guidelines/: .gitignore  main.tex
guidelines/content/: w44.tex  w45.tex  w46.tex  w47.tex  w48.tex  w49.tex
guidelines/setup/: commands.tex  packages.tex
launch/: connect.launch  connect_multiple.launch  distance_keeping.launch  sim.launch  sim_multiple.launch
materials/: Literature_Review.md
meeting-notes/: weekly-meeting-w47.md  weekly-meeting-w48.md  weekly-meeting-w49.md  weekly-meeting-w51.md
project-plans/: bitcraze_project_review_w4.md  bitcraze_project_review_w7.md
project-plans/project-plan/: main.aux  main.tex
scripts/: CAA_v1.0.py  CAA_v2.0.py  CAA_v2.1.py  collision_avoidance.py  fly.py  fly_multiple.py  follow_traj.py  follow_traj_mult.py  hover.py  keep_distance.py  logging_node.py  multi_circle_flight_test.py  plotter.py  position_handler.py  position_sim.py  set_goal.py  simulator.py  swap_positions.py  temp.py  trajectory_handler.py
srv/: SetGoal.srv  SetPolygonTrajectory.srv  SetTargetPosition.srv
